# OSSE

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
client/: Cargo.toml
client/src/: main.rs
crawler/: Cargo.toml  top-1000-websites.txt
crawler/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  main.rs
indexer/: Cargo.toml
indexer/src/: indexer_implementation.rs  main.rs
lib/: Cargo.toml
lib/src/: lib.rs
