[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockingqueue = "0.1.1"
reqwest = {version = "0.11", features = ["blocking", "json"]}
scraper = "0.12.0"
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "crawler"
path = "src/main.rs"
