[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json"]}
scraper = "0.12.0"
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.22", features = ["full"] }
async-channel = "1.7.1"
url = "2.3.1"
rand = "0.7.3"

[[bin]]
name = "crawler"
path = "src/main.rs"
