[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.9", features = ["blocking", "json"]}
scraper = "0.12.0"
itertools = "0.10.5"
tokio = { version = "0.2.22", features = ["full"] }
async-channel = "1.7.1"
url = "2.3.1"
rand = "0.7.3"
log = "0.4.17"
env_logger = "0.9.1"
lib = { path = "../lib" }

[[bin]]
name = "crawler"
path = "src/main.rs"
