[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
gloo = "0.8.0"
web-sys = "0.3.60"
wasm-bindgen = "0.2.83"
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
itertools = "0.10.5"
lib = { path = "../lib" }